# HOA

./: RAILWAY_DEPLOY.md  README.md
HOA-API/: .env.example  .gitignore  .npmrc  README.md  _webhook-receiver.cjs  docker-compose.yml  openapi.json  package-lock.json  package.json  railway.json  schema.gql  tsconfig.json
HOA-API/prisma/: schema.prisma  seed.ts
HOA-API/scripts/: export-openapi.ts
HOA-API/src/: app.module.ts  health.controller.ts  main.ts
HOA-DOCS/: PRD.md  ROADMAP.md  SPEC-unit-default-billing.md  tokens.json
HOA-ENTERPRISE/: .env.example  .gitignore  next.config.js  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.tsbuildinfo
HOA-ENTERPRISE/.claude/: launch.json
HOA-ENTERPRISE/public/: custom-sw.js  manifest.webmanifest  sw.js
HOA-ENTERPRISE/src/: middleware.ts
HOA-MARKETING/: .env  .env.example  .npmrc  README.md  index.html  package-lock.json  package.json  railway.json  tailwind.config.ts  vercel.json
HOA-MARKETING/public/: _redirects
HOA-MARKETING/src/: App.tsx  index.css
HOA-RESIDENTS/: .dockerignore  .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  railway.json  tailwind.config.ts  tsconfig.tsbuildinfo
HOA-SDK-JS/: .gitignore  README.md  package-lock.json  package.json  tsconfig.esm.json  tsconfig.json
HOA-SDK-PY/: .gitignore  README.md  pyproject.toml
HOA-SDK-PY/hoa_africa/: __init__.py  client.py  errors.py  types.py
HOA-SDK-PY/smoke/: smoke.py
HOA-SDK-PY/tests/: test_client.py
scripts/: setup-railway.ps1  setup-railway.sh  wire-railway-github.ps1
(+467 files in other folders)
